# HaVSA

./: LICENSE  README.md  Setup.hs  versionspaces.cabal
documents/: intro.md
src/AI/: Examples.hs  LogicHelpers.hs  Tests.hs  VersionSpaces.hs
tests/: Main.hs
tests/AI/: #Tests.hs#  .#Tests.hs  Tests.hs  VersionSpaceTests.hs
