-- cabal configure --prefix=$HOME --user
-- cabal build
name:                VersionSpaces
version:             0.0
synopsis:            <Project description>
description:         <Project description>
category:            AI
license:             OtherLicense
License-file:        LICENSE
author:              Rogan Creswick
maintainer:          creswick@gmail.com
build-depends:       base
Cabal-Version:       >=1.2	 
build-type:          Simple


Library
   Build-depends:	    base, logict
   Exposed-modules:   AI.VersionSpaces
   ghc-options:       -Wall -O
   hs-source-dirs:    src

-- Executable tests
--   Main-Is:           AI/Tests.hs
--
--   Build-Depends:     QuickCheck >= 1.1 && < 2
--   ghc-options:       -Wall -O
--   hs-source-dirs:    src
